# progression_problems

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: progression_problems.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/progression_problems/: index.rst
docs/source/progression_problems/TRIGA/: index.rst  system_specifications.rst
docs/source/progression_problems/TRIGA/NETL/: index.rst  system_specifications.rst
docs/source/progression_problems/TRIGA/NETL/problem_definitions/: index.rst  neutronics.rst
docs/source/progression_problems/TRIGA/problem_definitions/: index.rst  neutronics.rst
docs/source/python_tools/: index.rst
docs/source/python_tools/TRIGA/: index.rst
docs/source/python_tools/TRIGA/NETL/: index.rst
progression_problems/: constants.py
progression_problems/TRIGA/: __init__.py  default_geometries.py  default_materials.py  fuel_element.py  geometry_specs.py  graphite_element.py
progression_problems/TRIGA/NETL/: __init__.py  beam_port.py  central_thimble.py  core.py  default_geometries.py  default_materials.py  fuel_follower_control_rod.py  geometry_specs.py  grid_plate.py  pool.py  problem_1_utils.py  problem_2_utils.py  problem_3_utils.py  problem_4_utils.py  problem_5_utils.py  reactor.py  reflector_canister.py  rsr_cavity.py  shroud.py  source_holder.py  transient_rod.py  utils.py
test/unit/TRIGA/NETL/: test_openmc_tools.py  test_progression_problem_tools.py
