[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "progression_problems"
version = "0.0.1"
authors = [
  { name="Cole Gentry", email="cole.gentry@austin.utexas.edu" },
]
description = "A collection of reactor physics progression problems and input construction tools"
readme = "README.md"
keywords = []
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: BSD-3-Clause',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
dependencies = [
    "numpy>=1.24.0",
    "openmc>=0.14.0",
    "MPACTPy>=0.0.1",
    "coreforge>=0.0.1",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
]
test = [
    "pytest",
    "pylint",
]
docs = [
    "sphinx",
    "sphinxcontrib-katex",
    "sphinx-numfig",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/UT-Computational-NE/progression_problems"
Issues = "https://github.com/UT-Computational-NE/progression_problems/issues"

[tool.pylint.'messages control']
disable = [
    "chained-comparison",
    "broad-exception-raised",
    "broad-exception-caught",
    "dangerous-default-value",
    "duplicate-code",
    "eval-used",
    "fixme",
    "invalid-name",
    "missing-module-docstring",
    "missing-function-docstring",
    "pointless-string-statement",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-lines",
    "too-many-locals",
    "too-many-branches",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "unspecified-encoding",
    "unused-variable"
]

[tool.pylint.'format']
max-line-length = 127

[tool.black]
line-length = 127
